--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "chalk": "^1.1.3",
     "compression": "^1.6.1",
     "express": "^4.13.4",
+    "formsy-material-ui": "^0.4.3",
+    "formsy-react": "^0.18.0",
     "jquery": "^2.2.3",
+    "material-ui": "^0.15.0",
     "mysql": "^2.10.2",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.3.0",
+    "react-tap-event-plugin": "^1.0.0",
     "sequelize": "^3.22.0",
     "sequelize-connect": "^1.2.2"
   },
